# cryptor

./: .gitignore  CMakeLists.txt  README.md
include/: crypt.hpp  defines.hpp
src/: crypt.cpp  main.cpp
